--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header > p{
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-shadow: 0px 0px 5px #063d1e;
 }
 nav{
